--- a/claseSQL/views/index.html
+++ b/claseSQL/views/index.html
@@ -17,17 +17,16 @@
       
     <div class="jumbotron mt-3">
         <h1>Add Products</h1>
-        <input id="inputId" class="form-control" style="max-width: 300px" type="text" placeholder="Id" /><br />
-        <input id="inputTitle" class="form-control" style="max-width: 300px" type="text" placeholder="Title" /><br />
-        <input id="inputPrice" class="form-control" style="max-width: 300px" type="text" placeholder="Price" /><br />
-        <input id="inputThumbnail" class="form-control" style="max-width: 300px" type="text" placeholder="Thumbnail" /><br />
+        <input id="inputTitle" class="form-control" style="max-width: 300px" type="text" placeholder="Title" />
+        <input id="inputPrice" class="form-control" style="max-width: 300px" type="text" placeholder="Price" />
+        <input id="inputThumbnail" class="form-control" style="max-width: 300px" type="text" placeholder="Thumbnail" />
         <button id="botonEnviarProductos"  class="btn btn-success mb-3">Add</button>
         <div id="listaProductos" style="max-width: 500px"></div>
       </div>
     <div class="jumbotron mt-3">
       <h1>Chat</h1>
-      <input id="inputAutor" class="form-control" style="max-width: 300px" type="text" placeholder="Autor" /><br />
-      <input id="inputMensaje" class="form-control" style="max-width: 300px" type="text" placeholder="Mensaje" /><br />
+      <input id="inputAutor" class="form-control" style="max-width: 300px" type="text" placeholder="Autor" />
+      <input id="inputMensaje" class="form-control" style="max-width: 300px" type="text" placeholder="Mensaje" />
       <button id="botonEnviarChat"  class="btn btn-success mb-3">Send</button>
       <div id="listaMensajes" style="max-width: 500px"></div>
     </div>
